# window_zones

./: CONTEXT.md  Cargo.toml  README.md
docs/adr/: 0001-v1-window-positioning-utility.md  0002-runtime-config-reload-atomicity.md
docs/runbooks/: installation.md  running.md  testing.md
scripts/: install.sh  run.sh  test.sh
src/: actions.rs  config.rs  dispatcher.rs  display_movement.rs  executor.rs  geometry.rs  hotkey_system.rs  lib.rs  macos_window_system.rs  main.rs  runtime.rs  wayland_window_system.rs  window_system.rs  windows_window_system.rs  x11_window_system.rs  zones.rs
