[package]
name = "window_zones"
version = "0.1.0"
edition = "2024"
description = "Platform-neutral core for a Rectangle-style window positioning utility."
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "2"
toml = "0.9"

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = "0.13"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
] }