[package]
name = "window_zones"
version = "0.1.0"
edition = "2024"
description = "Platform-neutral core for a Rectangle-style window positioning utility."
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "0.9"

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { version = "0.13", features = ["randr"] }
tray-item = { version = "0.10", default-features = false, features = ["ksni"] }

[target.'cfg(target_os = "windows")'.dependencies]
tray-item = { version = "0.10" }
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
] }
